syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.test.proto";
option java_outer_classname = "ApolloTestProto";
option objc_class_prefix = "ATp";
import "google/protobuf/any.proto";

package apollo.test; 

service TestIt {
    rpc ping ( google.protobuf.Any ) returns (google.protobuf.Any) {}
}

message ByteMessage {
    bytes contents = 1;
}

message PeerCreds {
    int32 pid = 1;
    int32 uid = 2;
    repeated int32 gids = 3;
}
